# stack-and-queue

./: CMakeLists.txt
.github/workflows/: main.yml
lib/: CMakeLists.txt  TMultiStack.h  TQueue.cpp  TQueue.h  TStack.h
test/: CMakeLists.txt  test_multistack.cpp  test_queue.cpp  test_stack.cpp
